--- a/src/main/java/views/PhonesList.form
+++ b/src/main/java/views/PhonesList.form
@@ -3,19 +3,11 @@
   <grid id="27dc6" binding="panel1" default-binding="true" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="811" height="400"/>
+      <xy x="20" y="20" width="841" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="9b52" class="javax.swing.JTable" binding="phonesTable">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="6" hsize-policy="2" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="800" height="-1"/>
-          </grid>
-        </constraints>
-        <properties/>
-      </component>
       <component id="559ea" class="javax.swing.JButton" binding="adicionarTelefoneButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
@@ -114,6 +106,19 @@
           <text value="Filtrar"/>
         </properties>
       </component>
+      <scrollpane id="d0c7d">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="4" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="9b52" class="javax.swing.JTable" binding="phonesTable">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
     </children>
   </grid>
 </form>
